--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -34,7 +34,7 @@
 "Off" = "关闭";
 "iPhone / iPad(Cellular) over BT" = "通过蓝牙发现 iPhone / iPad (蜂窝版)";
 "iPhone / iPad / Watch over WiFi" = "通过WiFi发现 iPhone / iPad / Watch";
-"Other BT Device" = "蓝牙设备(部分)";
+"Other BT Device" = "其他蓝牙设备 (部分)";
 "Guess charging status of iDevices or BLE devices over BT" = "推测通过蓝牙发现的 iPhone / iPad 或 BLE 设备是否在充电";
 "after 20min" = "20分钟后";
 "after 40min" = "40分钟后";
@@ -56,7 +56,11 @@
 "Hidden Device:" = "已隐藏的设备:";
 "Data Source:" = "数据来源:";
 "StatusBar" = "状态栏图标";
-"Show Mac Battery:" = "在状态栏显示 Mac 内置电池:";
-"Show percentage:" = "显示电池百分比:";
-"(relaunch needed)" = "(下次运行时生效)";
+"Show Mac Battery (relaunch needed)" = "显示 Mac 电池状态 (下次运行时生效)";
+"Show Battery Percentage" = "显示电池百分比";
 "Try to get battery info from all BLE devices (Beta)" = "尝试读取周边所有 BLE 设备的电量信息 (实验性, 谨慎开启)";
+"AirPods / Beats" = "AirPods / Beats 耳机";
+"Show Mac Battery" = "显示本机电量";
+"Reverse device list" = "倒序排列设备";
+"Widget" = "小组件";
+"No Device Found!" = "未发现任何设备!";
