add Alert Settings

--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -66,3 +66,5 @@
 "No Device Found!" = "未发现任何设备!";
 "Low Battery" = "电池电量不足";
 "\"%@\" remaining battery %d%%" = "\"%@\" 还剩 %d%% 电量";
+"Notification Sound:" = "播放通知音效:";
+"Battery Level Threshold:" = "低电量警告阈值:";
