fix some bugs; add single device widget; add update interval option

--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -25,7 +25,7 @@
 "This Mac" = "本机电量";
 "Battery on Dock" = "显示指定设备";
 "Quit AirBattery" = "退出 AirBattery";
-"Show AirBattery on:" = "将图标显示在:";
+"Show AirBattery on:" = "图标显示位置:";
 "Dock" = "程序坞";
 "Status Bar" = "状态栏";
 "Both" = "同时";
@@ -57,13 +57,12 @@
 "Hidden Device:" = "已隐藏的设备:";
 "Data Source:" = "数据来源:";
 "StatusBar" = "状态栏图标";
-"Show Mac Battery (relaunch needed)" = "显示 Mac 电池状态 (下次运行时生效)";
+"Show Built-in Battery" = "显示内建电池";
 "Show Battery Percentage" = "显示电池百分比";
-"Hidden Percentage above 90%" = "电量低于 90% 才显示百分比";
+"Hidden Percentage above 90%" = "高于 90% 时不显示";
 "Try to get battery info from all BLE devices (Beta)" = "尝试读取周边所有 BLE 设备的电量信息 (实验性, 谨慎开启)";
 "AirPods / Beats" = "AirPods / Beats 耳机";
-"Show Mac Battery" = "显示本机电量";
-"Reverse device list" = "倒序排列设备";
+"Reverse Device List" = "倒序排列设备";
 "Widget" = "小组件";
 "No Device Found!" = "未发现任何设备!";
 "Low Battery" = "电池电量不足";
@@ -71,3 +70,13 @@
 "Notification Sound:" = "播放通知音效:";
 "Battery Level Threshold:" = "低电量警告阈值:";
 " Alert " = "低电量通知";
+"Select a Device in Preferences" = "请在设置中选择需要显示的设备";
+"Single Device Widget" = "单设备小组件";
+"Update Interval:" = "数据更新间隔:";
+"Short" = "短";
+"Medium" = "中等";
+"Long" = "较长";
+"Relaunch Required" = "AirBattery 需要重启";
+"Restart AirBattery to apply this change." = "请手动重启 AirBattery 以应用此修改.";
+"OK" = "好";
+"Searching for " = "正在搜寻: ";
