--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -30,7 +30,7 @@
 "Status Bar" = "状态栏";
 "Both" = "同时";
 "None" = "隐藏图标";
-"Loop mode:" = "轮播模式:";
+"Carousel mode:" = "轮播模式:";
 "On" = "启用";
 "Off" = "关闭";
 "iPhone / iPad(Cellular) over BT" = "通过蓝牙发现 iPhone / iPad (蜂窝版)";
