--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -5,6 +5,7 @@
   Created by apple on 2023/9/7.
   
 */
+
 "Appearance:" = "图标主题:";
 "Automatic" = "自动切换";
 "Light" = "浅色";
@@ -13,33 +14,34 @@
 "No Battery!" = "未检测到电池!";
 "Time until full: " = "距充满还有: ";
 "Time until empty: " = "距用完还有: ";
-"Until full:" = "距充满还剩:";
-"Until empty:" = "可用时长:";
+"Until Full:" = "距充满还剩:";
+"Until Empty:" = "可用时长:";
 "Show" = "显示";
 "About AirBattery" = "关于 AirBattery";
 " (Case)" = " (充电盒)";
 " mins ago" = " 分钟前";
 "Percent" = "电量数值";
 "Icon" = "图标";
-"Show This Mac:" = "显示本机电量:";
+"Built-in Battery:" = "内建电池:";
 "This Mac" = "本机电量";
 "Battery on Dock" = "显示指定设备";
 "Quit AirBattery" = "退出 AirBattery";
 "Show AirBattery on:" = "图标显示位置:";
-"Dock" = "程序坞";
-"Status Bar" = "状态栏";
+"Dock Icon" = "程序坞";
+"Menu Bar" = "状态栏";
 "Both" = "同时";
 "None" = "隐藏图标";
-"Carousel mode:" = "轮播模式:";
+"Carousel Mode:" = "轮播模式:";
 "On" = "启用";
 "Off" = "关闭";
-"iPhone / iPad(Cellular) over BT" = "通过蓝牙发现 iPhone / iPad (蜂窝版)";
-"iPhone / iPad / Watch over WiFi" = "通过WiFi发现 iPhone / iPad / Watch";
-"Other BT Device" = "其他蓝牙设备 (部分)";
-"Guess charging status of iDevices or BLE devices over BT" = "推测通过蓝牙发现的 iPhone / iPad 或 BLE 设备是否在充电";
+"WiFi / LAN Scanner" = "通过局域网搜索设备";
+"Bluetooth Scanner" = "通过蓝牙搜索设备";
+"Find AirPods / Beats" = "搜索AirPods/Beats耳机";
+"Non-Apple Devices" = "搜索非 Apple 设备";
+"Guess Power Status" = "推测BLE设备充电状态";
+"Get All BLE Devices" = "搜索所有 BLE 设备";
 "after 20min" = "20分钟后";
 "after 40min" = "40分钟后";
-"Guess" = "推测";
 "Remove Offline Device:" = "移除离线设备:";
 "Never" = "永不";
 "Hidden" = "隐藏";
@@ -52,35 +54,49 @@
 "Launch at Login" = "登录时启动";
 "General" = "一般设置";
 "DockTile" = "程序坞图标";
+"Notification" = "充电通知";
+"Blacklist" = "屏蔽设备";
 "(relaunch needed) Get data from:" = "(重启App后生效) 读取下列设备类型:";
 "AirBattery Settings" = "AirBattery设置";
 "Hidden Device:" = "已隐藏的设备:";
 "Data Source:" = "数据来源:";
 "StatusBar" = "状态栏图标";
-"Show Built-in Battery" = "显示内建电池用量";
-"Show Battery Percentage" = "显示电池百分比";
-"Hidden Percentage above 90%" = "高于 90% 时不显示";
-"Try to get battery info from all BLE devices (Beta)" = "尝试读取周边所有 BLE 设备的电量信息 (实验性, 谨慎开启)";
-"AirPods / Beats" = "AirPods / Beats 耳机";
-"Reverse Device List" = "倒序排列设备";
+"Dynamic Battery Icon" = "显示动态电池图标";
+"Show Battery Percentage" = "显示电量百分比";
+"Hidden Percentage above 90%" = "高于 90% 时隐藏百分比";
+"Show Mac Built-in Battery" = "显示此 Mac 的内置电池";
+"Reverse the Device List" = "倒序排列设备";
 "Widget" = "小组件";
 "No Device Found!" = "未发现任何设备!";
 "Low Battery" = "电池电量不足";
-"\"%@\" remaining battery %d%%" = "\"%@\" 还剩 %d%% 电量";
+"\"%@\" remaining battery %d%%" = "\"%@\" 剩余电量 %d%%";
+"Fully Charged" = "电池电量充足";
+"\"%@\" battery has reached %d%%" = "\"%@\" 已充电至 %d%%";
 "Notification Sound:" = "播放通知音效:";
-"Battery Level Threshold:" = "低电量警告阈值:";
-" Alert " = "低电量通知";
+"Low Battery Threshold:" = "低于此电量发送通知:";
+"Fully Charged Threshold:" = "高于此电量发送通知:";
 "Select a Device in Preferences" = "请在设置中选择需要显示的设备";
 "Single Device Widget" = "单设备小组件";
-"Update Interval:" = "数据更新间隔:";
-"Short" = "短";
+"Update Interval" = "数据更新间隔";
+"Merge Threshold" = "双耳合并阈值";
+"Short" = "较短";
 "Medium" = "中等";
 "Long" = "较长";
 "Relaunch Required" = "AirBattery 需要重启";
 "Restart AirBattery to apply this change." = "请手动重启 AirBattery 以应用此修改.";
 "OK" = "好";
-"Searching for " = "正在搜寻: ";
+"Searching: " = "正在搜寻: ";
 "Update" = "更新设置";
 "Check for Updates…" = "检查程序更新…";
 "Automatically check for updates" = "自动检查程序更新";
 "Automatically download updates" = "自动下载程序更新";
+"Click Dock icon again to hide this panel" = "再次点击 Dock 图标收起此面板";
+"Click to enter the device name" = "点击输入需要屏蔽的设备名称";
+"Scan your iPhone / iPad / Apple Watch / VisionPro and other iDevices under the same router" = "尝试搜索当前局域网中所有属于您的 iPhone / iPad / Apple Watch / VisionPro 等设备";
+"Scan your iPhone and iPad(Cellular) via Bluetooth" = "尝试通过蓝牙搜索周边属于您的 iPhone 或蜂窝版 iPad";
+"Guess if the iPhone / iPad or BLE device found by Bluetooth is charging" = "利用电量变化来推测通过蓝牙发现的 iPhone / iPad 或其他 BLE 设备";
+"Only some of non-Apple peripherals are supported!" = "仅支持部分第三方蓝牙设备";
+"Try to get the battery usage of any Bluetooth device that AirBattery can find\n\nWARNING: This is a BETA feature and may cause unexpected errors!" = "尝试搜索周边所有的 BLE 设备, 即使它可能不属于您\n\n请注意: 这是一项测试版功能, 可能会导致未知的错误!";
+"Show or hide this Mac's built-in battery in the Dock icon" = "在 Dock 图标中显示此 Mac 的内置电池, 或将其从 Dock 图标上隐藏";
+"Cycle through all found devices in the Dock icon" = "在 Dock 图标中循环显示所有已发现的设备";
+"If the difference in battery usage between the left and right earbuds is less than this value, AirBattery will show them as one device" = "当同一副耳机左右两侧的电量差距小于此值的时候, AirBattery会将它们合并显示为一个设备";
