add percentages to more widgets; added configurable widgets for macOS 14; Customize widget update interval; Custom merge interval; more fix

--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -42,12 +42,15 @@
 "Get All BLE Devices" = "搜索所有 BLE 设备";
 "after 20min" = "20分钟后";
 "after 40min" = "40分钟后";
+"min" = "分钟";
 "Remove Offline Device:" = "移除离线设备:";
 "Never" = "永不";
 "Hidden" = "隐藏";
 "AirBattery is not running\nLaunch the app to make the widget work." = "请先启动 AirBattery 主程序以使小组件正常工作.";
 "AirBattery is not running\nLaunch the app to make\nthe widget work." = "请先启动 AirBattery 主程序\n以使小组件正常工作.";
-"Displays battery information for your devices from AirBattery." = "显示由 AirBattery 收集到的电量信息.";
+"Displays battery usage for your devices from AirBattery." = "显示由 AirBattery 收集到的电池用量信息.";
+"More ways to displays battery usage for your devices from AirBattery." = "以更多方式展示由 AirBattery 收集到的电池用量信息";
+"Displays the battery usage of a specific device." = "显示某台特定设备的电池用量信息";
 "Batteries" = "电量信息";
 "Hide This" = "隐藏此设备";
 "Hidden Device..." = "已隐藏的设备...";
@@ -59,13 +62,12 @@
 "(relaunch needed) Get data from:" = "(重启App后生效) 读取下列设备类型:";
 "AirBattery Settings" = "AirBattery设置";
 "Hidden Device:" = "已隐藏的设备:";
-"Data Source:" = "数据来源:";
 "StatusBar" = "状态栏图标";
 "Dynamic Battery Icon" = "显示动态电池图标";
 "Show Battery Percentage" = "显示电量百分比";
 "Hidden Percentage above 90%" = "高于 90% 时隐藏百分比";
 "Show Mac Built-in Battery" = "显示此 Mac 的内置电池";
-"Reverse the Device List" = "倒序排列设备";
+"Reverse the Device List" = "颠倒设备列表顺序";
 "Widget" = "小组件";
 "No Device Found!" = "未发现任何设备!";
 "Low Battery" = "电池电量不足";
@@ -73,11 +75,11 @@
 "Fully Charged" = "电池电量充足";
 "\"%@\" battery has reached %d%%" = "\"%@\" 已充电至 %d%%";
 "Notification Sound:" = "播放通知音效:";
-"Low Battery Threshold:" = "低于此电量发送通知:";
-"Fully Charged Threshold:" = "高于此电量发送通知:";
+"Low Battery Threshold:" = "电量过低阈值:";
+"Fully Charged Threshold:" = "充电完成阈值:";
 "Select a Device in Preferences" = "请在设置中选择需要显示的设备";
 "Single Device Widget" = "单设备小组件";
-"Update Interval" = "数据更新间隔";
+"Update Interval" = "更新间隔";
 "Merge Threshold" = "双耳合并阈值";
 "Short" = "较短";
 "Medium" = "中等";
@@ -90,8 +92,9 @@
 "Check for Updates…" = "检查程序更新…";
 "Automatically check for updates" = "自动检查程序更新";
 "Automatically download updates" = "自动下载程序更新";
+"Not Set" = "未指定";
 "Click Dock icon again to hide this panel" = "再次点击 Dock 图标收起此面板";
-"Click to enter the device name" = "点击输入需要屏蔽的设备名称";
+"Click to enter the device name" = "点此输入需要屏蔽的设备名称";
 "Scan your iPhone / iPad / Apple Watch / VisionPro and other iDevices under the same router" = "尝试搜索当前局域网中所有属于您的 iPhone / iPad / Apple Watch / VisionPro 等设备";
 "Scan your iPhone and iPad(Cellular) via Bluetooth" = "尝试通过蓝牙搜索周边属于您的 iPhone 或蜂窝版 iPad";
 "Guess if the iPhone / iPad or BLE device found by Bluetooth is charging" = "利用电量变化来推测通过蓝牙发现的 iPhone / iPad 或其他 BLE 设备";
@@ -100,3 +103,12 @@
 "Show or hide this Mac's built-in battery in the Dock icon" = "在 Dock 图标中显示此 Mac 的内置电池, 或将其从 Dock 图标上隐藏";
 "Cycle through all found devices in the Dock icon" = "在 Dock 图标中循环显示所有已发现的设备";
 "If the difference in battery usage between the left and right earbuds is less than this value, AirBattery will show them as one device" = "当同一副耳机左右两侧的电量差距小于此值的时候, AirBattery会将它们合并显示为一个设备";
+"System" = "系统默认";
+"System: Determined by macOS\n\nNearbility: Same as Nearbility setting" = "系统默认: 由 macOS 决定小组件何时更新\n\nNearbility: 与 Nearbility 更新频率保持一致";
+"AirBattery battery usage widget" = "AirBattery 电池用量小组件";
+"Configuration" = "配置项";
+"Enter Device Name" = "请输入设备名称";
+"Right click to configure" = "右键单击以配置此小组件";
+"Device Name Copied" = "设备名复制成功";
+"Device name: \"%@\" has been copied to the clipboard." = "设备名 \"%@\" 已成功拷贝至剪贴板";
+"Reload All Widgets" = "强制刷新所有小组件";
