--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -34,23 +34,25 @@
 "Carousel Mode:" = "轮播模式:";
 "On" = "启用";
 "Off" = "关闭";
-"WiFi / LAN Scanner" = "通过局域网搜索设备";
-"Bluetooth Scanner" = "通过蓝牙搜索设备";
+"WiFi Scanner (iOS)" = "通过局域网搜索 iOS 设备";
+"BLE Scanner (iOS)" = "通过蓝牙搜索 iOS 设备";
+"Bluetooth Scanner" = "搜索支持的蓝牙外设";
 "Find AirPods / Beats" = "搜索AirPods/Beats耳机";
-"Non-Apple Devices" = "搜索非 Apple 设备";
-"Guess Power Status" = "推测BLE设备充电状态";
-"Get All BLE Devices" = "搜索所有 BLE 设备";
+"Non-Apple BLE Devices" = "搜索第三方 BLE 设备";
+"Guess Power Status" = "推测 BLE 设备充电状态";
+"Get All BLE Devices" = "搜索所有蓝牙 BLE 设备";
 "after 20min" = "20分钟后";
 "after 40min" = "40分钟后";
 "min" = "分钟";
 "Remove Offline Device:" = "移除离线设备:";
 "Never" = "永不";
 "Hidden" = "隐藏";
-"AirBattery is not running\nLaunch the app to make the widget work." = "请先启动 AirBattery 主程序以使小组件正常工作.";
-"AirBattery is not running\nLaunch the app to make\nthe widget work." = "请先启动 AirBattery 主程序\n以使小组件正常工作.";
-"Displays battery usage for your devices from AirBattery." = "显示由 AirBattery 收集到的电池用量信息.";
-"More ways to displays battery usage for your devices from AirBattery." = "以更多方式展示由 AirBattery 收集到的电池用量信息";
-"Displays the battery usage of a specific device." = "显示某台特定设备的电池用量信息";
+"AirBattery is not running\nLaunch the app to make the widget work" = "请先启动 AirBattery 主程序以使小组件正常工作";
+"AirBattery is not running\nLaunch the app to make\nthe widget work" = "请先启动 AirBattery 主程序\n以使小组件正常工作";
+"Displays battery usage for your devices from AirBattery" = "显示由 AirBattery 收集到的电量信息";
+"More ways to displays battery usage for your devices" = "以更多方式展示所有设备的电量信息";
+"Displays battery usage for your devices without percentage" = "以纯图形展示所有设备的电量信息";
+"Displays the battery usage of a specific device" = "显示某台特定设备的电量信息";
 "Batteries" = "电量信息";
 "Hide This" = "隐藏此设备";
 "Hidden Device..." = "已隐藏的设备...";
@@ -79,8 +81,9 @@
 "Fully Charged Threshold:" = "充电完成阈值:";
 "Select a Device in Preferences" = "请在设置中选择需要显示的设备";
 "Single Device Widget" = "单设备小组件";
-"Update Interval" = "更新间隔";
-"Merge Threshold" = "双耳合并阈值";
+"Update Interval" = "数据更新间隔";
+"Refresh Interval" = "内容刷新间隔";
+"Merge Limits" = "耳机合并百分比";
 "Short" = "较短";
 "Medium" = "中等";
 "Long" = "较长";
@@ -98,17 +101,19 @@
 "Scan your iPhone / iPad / Apple Watch / VisionPro and other iDevices under the same router" = "尝试搜索当前局域网中所有属于您的 iPhone / iPad / Apple Watch / VisionPro 等设备";
 "Scan your iPhone and iPad(Cellular) via Bluetooth" = "尝试通过蓝牙搜索周边属于您的 iPhone 或蜂窝版 iPad";
 "Guess if the iPhone / iPad or BLE device found by Bluetooth is charging" = "利用电量变化来推测通过蓝牙发现的 iPhone / iPad 或其他 BLE 设备";
-"Only some of non-Apple peripherals are supported!" = "仅支持部分第三方蓝牙设备";
+"Get the battery usage of some Bluetooth peripherals (mouse, keyboard, headphone, etc.)\n\nPlease Note: Some devices cannot be listed even though macOS knows their battery usage" = "获取某些受支持的蓝牙外设的电量信息 (鼠标、键盘、耳机等)\n\n请注意: 有些设备无法被列出, 即使你可以在 macOS 内置的小组件中看到它";
 "Try to get the battery usage of any Bluetooth device that AirBattery can find\n\nWARNING: This is a BETA feature and may cause unexpected errors!" = "尝试搜索周边所有的 BLE 设备, 即使它可能不属于您\n\n请注意: 这是一项测试版功能, 可能会导致未知的错误!";
 "Show or hide this Mac's built-in battery in the Dock icon" = "在 Dock 图标中显示此 Mac 的内置电池, 或将其从 Dock 图标上隐藏";
 "Cycle through all found devices in the Dock icon" = "在 Dock 图标中循环显示所有已发现的设备";
 "If the difference in battery usage between the left and right earbuds is less than this value, AirBattery will show them as one device" = "当同一副耳机左右两侧的电量差距小于此值的时候, AirBattery会将它们合并显示为一个设备";
-"System" = "系统默认";
-"System: Determined by macOS\n\nNearbility: Same as Nearbility setting" = "系统默认: 由 macOS 决定小组件何时更新\n\nNearbility: 与 Nearbility 更新频率保持一致";
-"AirBattery battery usage widget" = "AirBattery 电池用量小组件";
+"System Default" = "跟随系统默认";
+"System Default: Determined by macOS\n\nNearbility: Same as Nearbility setting" = "跟随系统默认: 由 macOS 决定小组件何时更新\n\nNearbility: 与 Nearbility 更新频率保持一致";
+"AirBattery battery usage widget" = "AirBattery 电量小组件";
 "Configuration" = "配置项";
 "Enter Device Name" = "请输入设备名称";
 "Right click to configure" = "右键单击以配置此小组件";
 "Device Name Copied" = "设备名复制成功";
 "Device name: \"%@\" has been copied to the clipboard." = "设备名 \"%@\" 已成功拷贝至剪贴板";
-"Reload All Widgets" = "强制刷新所有小组件";
+"Reload All Widgets" = "刷新所有小组件";
+"Default" = "默认";
+"Custom" = "自定义";
