fix macOS 15; add Nearcast for widgets

--- a/AirBattery/zh-Hans.lproj/InfoPlist.strings
+++ b/AirBattery/zh-Hans.lproj/InfoPlist.strings
@@ -6,4 +6,4 @@
   
 */
 "NSBluetoothAlwaysUsageDescription" = "AirBattery使用蓝牙来获取周边设备的电量信息";
-//"NSBluetoothPeripheralUsageDescription" = "AirBattery使用蓝牙来获取周边设备的电量信息";
+"NSLocalNetworkUsageDescription" = "AirBattery会通过局域网络来获取周边设备的电量";
