--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -23,8 +23,6 @@
 "Percent" = "电量数值";
 "Icon" = "图标";
 "Built-in Battery:" = "内建电池:";
-"This Mac" = "本机电量";
-"Battery on Dock" = "显示指定设备";
 "Quit AirBattery" = "退出 AirBattery";
 "Show AirBattery on:" = "图标显示位置:";
 "Dock Icon" = "程序坞";
@@ -56,14 +54,11 @@
 "Displays battery usage for your devices without percentage" = "以纯图形展示所有设备的电量信息";
 "Displays the battery usage of a specific device" = "显示某台特定设备的电量信息";
 "Batteries" = "电量信息";
-"Hide This" = "隐藏此设备";
-"Hidden Device..." = "已隐藏的设备...";
 "Launch at Login" = "登录时启动";
 "General" = "一般设置";
 "DockTile" = "程序坞图标";
 "Notification" = "充电通知";
 "Blacklist" = "屏蔽设备";
-"(relaunch needed) Get data from:" = "(重启App后生效) 读取下列设备类型:";
 "AirBattery Settings" = "AirBattery设置";
 "Hidden Device:" = "已隐藏的设备:";
 "StatusBar" = "状态栏图标";
@@ -144,5 +139,7 @@
 "AirBattery Tips" = "AirBattery 小贴士";
 "Don't remind me again" = "不再提醒";
 "Whitelist Mode" = "白名单模式";
-"Only the following BLE devices will be connected:" = "AirBattery 仅会尝试读取下列 BLE 设备:";
-"The following BLE devices will be ignored:" = "AirBattery 将会忽略下列所有 BLE 设备:";
+//"Only the following BLE devices will be connected:" = "AirBattery 仅会尝试读取下列 BLE 设备:";
+//"The following BLE devices will be ignored:" = "AirBattery 将会忽略下列所有 BLE 设备:";
+"Only the following devices will be showed:" = "AirBattery 仅会显示下列设备:";
+"The following devices will be ignored:" = "AirBattery 将会忽略下列设备:";
