add colorful battery icon; fix icon length; fix trackpad icon

--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -132,6 +132,7 @@
 "Enter text" = "请输入文本";
 "Add to List" = "添加到列表";
 "Cancel" = "取消";
+"Colorful Battery Icon" = "使用彩色电量图标";
 
 //"Permission Required" = "需要授权";
 //"Open Settings" = "打开系统设置";
