Improved battery alert, Improved device window, Improved Dock icon, Improved menu bar

--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "Quit AirBattery" = "退出 AirBattery";
 "Show AirBattery on:" = "图标显示位置:";
 "Dock Icon" = "程序坞";
-"Menu Bar" = "状态栏";
+"Menu Bar" = "菜单栏";
 "Both" = "同时";
 "None" = "隐藏图标";
 "Carousel Mode:" = "轮播模式:";
@@ -57,11 +57,11 @@
 "Launch at Login" = "登录时启动";
 "General" = "一般设置";
 "DockTile" = "程序坞图标";
-"Notification" = "充电通知";
+//"Notification" = "充电通知";
 "Blacklist" = "屏蔽设备";
 "AirBattery Settings" = "AirBattery设置";
 "Hidden Device:" = "已隐藏的设备:";
-"StatusBar" = "状态栏图标";
+//"StatusBar" = "状态栏图标";
 "Dynamic Battery Icon" = "显示动态电池图标";
 "Show Battery Percentage" = "显示电量百分比";
 "Hidden Percentage when above: " = "高于此值时隐藏百分比: ";
@@ -73,9 +73,9 @@
 "\"%@\" remaining battery %d%%" = "\"%@\" 剩余电量 %d%%";
 "Fully Charged" = "电池电量充足";
 "\"%@\" battery has reached %d%%" = "\"%@\" 已充电至 %d%%";
-"Notification Sound:" = "播放通知音效:";
-"Low Battery Threshold:" = "电量过低阈值:";
-"Fully Charged Threshold:" = "充电完成阈值:";
+//"Notification Sound:" = "播放通知音效:";
+//"Low Battery Threshold:" = "电量过低阈值:";
+//"Fully Charged Threshold:" = "充电完成阈值:";
 "Select a Device in Preferences" = "请在设置中选择需要显示的设备";
 "Single Device Widget" = "单设备小组件";
 "Update Interval:" = "数据更新间隔:";
@@ -113,7 +113,7 @@
 "Enter Device Name" = "请输入设备名称";
 "Right click to configure" = "右键单击以配置此小组件";
 "Device Name Copied" = "设备名复制成功";
-"Device name: \"%@\" has been copied to the clipboard." = "设备名 \"%@\" 已成功拷贝至剪贴板";
+"Device name \"%@\" has been copied to the clipboard." = "设备名 \"%@\" 已成功拷贝至剪贴板";
 "Copy" = "拷贝";
 "Group ID Copied" = "小组 ID 复制成功";
 "Group ID has been copied to the clipboard." = "小组 ID 已成功拷贝至剪贴板";
@@ -133,6 +133,24 @@
 "Add to List" = "添加到列表";
 "Cancel" = "取消";
 "Colorful Battery Icon" = "使用彩色电量图标";
+"Transmit to..." = "将设备传送至...";
+"Transmitting" = "正在传送设备";
+"Transmission Failed" = "传送设备失败";
+"Failed to disconnect %@!" = "无法断开与 \"%@\" 的连接!";
+"No Available Peers" = "没有可用的接收端";
+"Unknown Command" = "未知命令";
+"doesn't support command \"%@\"" = "不支持 \"%@\" 命令!";
+"Device Connected" = "设备已连接";
+"%@ from %@" = "%@, 来自: %@";
+"Connection Failed" = "连接失败";
+"cannot connect to your device!" = "无法连接指定的设备!";
+"Save" = "保存";
+"Delete" = "删除";
+"Battery alert for" = "设置电量提醒";
+"Notify me when battery charged above:" = "当设备充电至高于此电量时发出通知:";
+"Notify me when battery goes below:" = "当设备放电至低于此电量时发出通知:";
+"Dock" = "程序坞";
+"Displaying AirBattery on the Dock will consume more power, it is better to use Menu Bar mode or Widgets." = "在程序坞上显示电池信息会导致能耗增高,\n使用菜单栏模式或小组件可以降低性能占用.";
 
 //"Permission Required" = "需要授权";
 //"Open Settings" = "打开系统设置";
