update setting panel; add ios battery style; fix speaker icon; fix black list

--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 
-"Appearance:" = "图标主题:";
+"Appearance" = "图标外观";
 "Automatic" = "自动切换";
 "Light" = "浅色";
 "Dark" = "深色";
@@ -20,33 +20,33 @@
 "About AirBattery" = "关于 AirBattery";
 " (Case)" = " (充电盒)";
 " mins ago" = " 分钟前";
-"Percent" = "电量数值";
-"Icon" = "图标";
-"Built-in Battery:" = "内建电池:";
+"Percent" = "百分比值";
+"Device Icon" = "设备图标";
+"Built-in Battery Style" = "内建电池样式";
 "Quit AirBattery" = "退出 AirBattery";
-"Show AirBattery on:" = "图标显示位置:";
+"Show AirBattery" = "将 AirBattery 置于";
 "Dock Icon" = "程序坞";
 "Menu Bar" = "菜单栏";
-"Both" = "同时";
+"Both" = "同时显示";
 "None" = "隐藏图标";
-"Carousel Mode:" = "轮播模式:";
+"Carousel Mode" = "轮播模式";
 "On" = "启用";
 "Off" = "关闭";
-"WiFi Scanner (iOS)" = "通过局域网扫描 iOS 设备";
-"BLE Scanner (iOS)" = "通过蓝牙扫描 iOS 设备";
-"Read Apple Pencil" = "获取 Apple Pencil 电量";
-"Bluetooth Scanner" = "扫描受支持的蓝牙设备";
+"Discover iOS devices via Network" = "通过局域网扫描 iOS 设备";
+"Discover iOS devices via Bluetooth" = "通过蓝牙扫描 iOS 设备";
+"Apple Pencil from your iPad" = "从 iPad 读取 Apple Pencil";
+"Discover BT and BLE devices" = "扫描常规和低功耗蓝牙设备";
 //"Find AirPods / Beats" = "扫描AirPods/Beats耳机";
 //"Non-Apple BLE Devices" = "扫描第三方 BLE 设备";
 //"Guess Power Status" = "推测 BLE 设备充电状态";
-"Enhanced BLE Scanner" = "扫描所有蓝牙 BLE 设备";
-"Enhanced HID Scanner" = "扫描更多蓝牙 HID 设备";
+"Discover more BT devices" = "扫描更多常规蓝牙设备";
+"Discover more BLE devices" = "扫描更多低功耗蓝牙设备";
 "after 20min" = "20分钟后";
 "after 40min" = "40分钟后";
 "min" = "分钟";
 "Remove Offline Device:" = "移除离线设备:";
 "Never" = "永不";
-"Hidden" = "隐藏";
+"Hidden" = "不显示";
 "AirBattery is not running\nLaunch the app to make the widget work" = "请先启动 AirBattery 主程序以使小组件正常工作";
 "AirBattery is not running\nLaunch the app to make\nthe widget work" = "请先启动 AirBattery 主程序\n以使小组件正常工作";
 "Displays battery usage for your devices from AirBattery" = "显示由 AirBattery 收集到的电量信息";
@@ -62,11 +62,12 @@
 "AirBattery Settings" = "AirBattery设置";
 "Hidden Device:" = "已隐藏的设备:";
 //"StatusBar" = "状态栏图标";
-"Dynamic Battery Icon" = "显示动态电池图标";
-"Show Battery Percentage" = "显示电量百分比";
-"Hidden Percentage when above: " = "高于此值时隐藏百分比: ";
-"Show Mac Built-in Battery" = "显示此 Mac 的内置电池";
-"Reverse the Device List" = "颠倒设备列表顺序";
+"Dynamic Battery Icon" = "动态电池图标";
+"Show Percentage" = "显示百分比";
+"Show Percentage on" = "将百分比显示在";
+"Hide percentage when above" = "高于此电量自动隐藏百分比";
+"Show Built-in Battery" = "显示此 Mac 的电池";
+"Reverse Device List" = "颠倒设备列表顺序";
 "Widget" = "小组件";
 "No Device Found!" = "未发现任何设备!";
 "Low Battery" = "电池电量不足";
@@ -78,14 +79,14 @@
 //"Fully Charged Threshold:" = "充电完成阈值:";
 "Select a Device in Preferences" = "请在设置中选择需要显示的设备";
 "Single Device Widget" = "单设备小组件";
-"Update Interval:" = "数据更新间隔:";
-"Refresh Interval:" = "内容刷新间隔:";
-"Merge Limits:" = "耳机合并百分比:";
+"Refresh Interval (min)" = "数据更新间隔 (分钟)";
+"Refresh Interval" = "内容刷新间隔";
+"Earbud Merging Threshold" = "立体声耳塞合并阈值";
 "Short" = "较短";
 "Medium" = "中等";
 "Long" = "较长";
 "Relaunch Required" = "AirBattery 需要重启";
-"Restart AirBattery to apply this change." = "请手动重启 AirBattery 以应用此修改.";
+"Relaunch AirBattery to apply this change" = "手动重启 AirBattery 以应用此修改";
 "OK" = "好";
 "Searching: " = "正在搜寻: ";
 "Update" = "更新设置";
@@ -95,17 +96,17 @@
 "Not Set" = "未指定";
 "Click Dock icon again to hide this panel" = "再次点击 Dock 图标收起此面板";
 //"Click to enter the device name" = "点此输入需要屏蔽的设备名称";
-"Scan your iPhone / iPad / Apple Watch / VisionPro and other iDevices under the same router" = "尝试扫描当前局域网中所有属于您的 iPhone / iPad / Apple Watch / VisionPro 等设备";
-"Scan your iPhone and iPad(Cellular) via Bluetooth" = "尝试通过蓝牙扫描周边属于您的 iPhone 或蜂窝版 iPad";
+"Scan your iPhone / iPad / Apple Watch / VisionPro and other iDevices in your local network." = "扫描局域网中所有属于您的 iPhone / iPad / Apple Watch / VisionPro 等设备.";
+"Scan your iPhone and iPad (Cellular) via Bluetooth." = "尝试通过蓝牙扫描周边属于您的 iPhone 或蜂窝版 iPad";
 "Read the battery status of the connected Apple Pencil through your iPad\n(It may take 10 minutes or longer to discover the Pencil for the first time)\n\nWARNING: This is a BETA feature and may drain your iPad's battery faster!" = "尝试读取已连接到 iPad 的 Apple Pencil 的电量信息\n(首次可能需要 10 分钟甚至更久才能读取到 Pencil)\n\n请注意: 这是一项测试版功能, 可能会加速 iPad 电池耗尽!";
 //"Guess if the iPhone / iPad or BLE device found by Bluetooth is charging" = "利用电量变化来推测通过蓝牙发现的 iPhone / iPad 或其他 BLE 设备";
 //"Get the battery usage of some Bluetooth peripherals (mouse, keyboard, headphone, etc.)\n\nPlease Note: Some devices cannot be listed even though macOS knows their battery usage" = "获取某些受支持的蓝牙设备的电量信息 (鼠标、键盘、耳机等)\n\n请注意: 有些设备无法被列出, 即使你可以在 macOS 内置的小组件中看到它";
-"Get the battery usage of some Bluetooth peripherals (mouse, keyboard, headphone, etc.)\n\nIf some of your device is not shown, try enabling \"Enhanced HID Scanner\"" = "获取某些受支持的蓝牙设备的电量信息 (鼠标、键盘、耳机等)\n\n如果部分设备没有显示出来, 请尝试启用\"扫描更多蓝牙 HID 设备\"";
- "Get the battery usage of more third-party Bluetooth HID devices\n\nBattery data will be updated when devices are reconnected to the Mac or the Mac wakes up" = "获取更多第三方蓝牙 HID 设备的电量信息\n\n\仅当这些设备刚被连接时或 Mac 被唤醒时, 电池数据才会更新";
+"Get the battery usage of some Bluetooth peripherals like mouse, keyboard, headphone or etc.\n\nIf some of your device is not shown, try enabling \"Discover more BT devices\" or \"Discover more BLE devices\"" = "获取某些受支持的蓝牙设备的电量信息 (鼠标、键盘、耳机等)\n\n如果部分设备没有显示出来, 请尝试启用\"发现更多常规蓝牙设备\" 或 \"发现更多低功耗蓝牙设备\"";
+ "Get the battery usage of more third-party Bluetooth devices\n\nBattery data will be updated when devices are reconnected to the Mac or the Mac wakes up." = "获取更多第三方常规蓝牙设备的电量信息\n\n\仅当这些设备刚被连接时或 Mac 被唤醒时, 电池数据才会更新.";
 "Try to get the battery usage of any Bluetooth device that AirBattery can find\n\nWARNING: This is a BETA feature and may cause unexpected errors!" = "尝试扫描周边所有的 BLE 设备, 即使它可能不属于您\n\n请注意: 这是一项测试版功能, 可能会导致未知的错误!";
 "Show or hide this Mac's built-in battery in the Dock icon" = "在 Dock 图标中显示此 Mac 的内置电池, 或将其从 Dock 图标上隐藏";
 "Cycle through all found devices in the Dock icon" = "在 Dock 图标中循环显示所有已发现的设备";
-"If the difference in battery usage between the left and right earbuds is less than this value, AirBattery will show them as one device" = "当同一副耳机左右两侧的电量差距小于此值的时候, AirBattery会将它们合并显示为一个设备";
+"If the difference in battery usage between the left and right earbuds is less than this value, AirBattery will show them as one device." = "当同一副立体声耳机左右两侧的电量差距小于此值的时候, AirBattery 会将它们合并显示为一个设备.";
 "System Default" = "跟随系统默认";
 "System Default: Determined by macOS\n\nNearbility: Same as Nearbility setting" = "跟随系统默认: 由 macOS 决定小组件何时更新\n\nNearbility: 与 Nearbility 更新频率保持一致";
 "AirBattery battery usage widget" = "AirBattery 电量小组件";
@@ -127,12 +128,13 @@
 "Group ID Copied" = "小组 ID 已复制";
 "Please create or enter a valid Group ID before use!" = "使用前请先创建或输入一个有效的小组 ID";
 "Group ID copied. Please enter it on your other Mac to join this group." = "小组 ID 已复制到剪贴板, 请在您的其他 Mac 上输入它以加入此 Nearcast 小组";
-"Nearcast will send data in the LAN at the same interval as the Nearbility engine.\nYour data has been encrypted, so please do not tell your Group ID to others." = "Nearcast 将会按照与 Nearbility 引擎相同的更新频率在局域网中发送电量信息.\n所有被发送的电量数据都已经过加密, 所以请不要将你的小组 ID 告诉其他人.";
+"Nearcast will broadcast your battery data within the local network." = "Nearcast 将会将会在本地局域网中对您的电量数据进行广播";
+"Your data has been encrypted using the group id, don't share it with others." = "所有被发送的数据内容均已经过加密, 所以请不要将你的小组 ID 交给他人";
 "Do not add too many Macs to a group, this can be tiring for the router!" = "请不要将太多 Mac 加入同一个 Nearcast 小组, 这可能会加重路由器的负担!";
 "Enter text" = "请输入文本";
 "Add to List" = "添加到列表";
 "Cancel" = "取消";
-"Colorful Battery Icon" = "使用彩色电量图标";
+"Colorful Battery Icon" = "彩色电量图标";
 "Transmit to..." = "将设备传送至...";
 "Transmitting" = "正在传送设备";
 "Transmission Failed" = "传送设备失败";
@@ -151,14 +153,24 @@
 "Notify me when battery goes below:" = "当设备放电至低于此电量时发出通知:";
 "Dock" = "程序坞";
 "Displaying AirBattery on the Dock will consume more power, it is better to use Menu Bar mode or Widgets." = "在程序坞上显示电池信息会导致能耗增高,\n使用菜单栏模式或小组件可以降低性能占用.";
+"Inside" = "在图标内部";
+"Outside" = "在图标外部";
+"Battery Icon Style" = "电池图标样式";
+"Menu Bar & Dock" = "菜单栏 & 程序坞";
+"Startup" = "启动设置";
+"Scanner" = "扫描设置";
+"Others" = "其他设置";
+"Peer Info" = "节点信息";
+"Local ID" = "本机 ID";
+"Same as Nearbility" = "与 Nearbility 同步";
 
 //"Permission Required" = "需要授权";
 //"Open Settings" = "打开系统设置";
-"If some of your devices shows battery level in the Bluetooth menu, but AirBattery doesn't find it. Try disconnecting and reconnecting it, and wait a few minutes." = "如果某些设备在系统蓝牙菜单显示电量\n但在 AirBattery 中没有显示的话\n请尝试断开然后重新连接它们并等待几分钟";
+"If some of your devices shows battery level in the Bluetooth menu, but AirBattery doesn't find it. Try disconnecting and reconnecting it, and wait a few minutes." = "如果某些设备在系统蓝牙菜单中有电量显示\n但是在 AirBattery 中没有显示出来的话\n请尝试断开然后重新连接它们并等待几分钟";
 "AirBattery Tips" = "AirBattery 小贴士";
 "Don't remind me again" = "不再提醒";
 "Whitelist Mode" = "白名单模式";
 //"Only the following BLE devices will be connected:" = "AirBattery 仅会尝试读取下列 BLE 设备:";
 //"The following BLE devices will be ignored:" = "AirBattery 将会忽略下列所有 BLE 设备:";
-"Only the following devices will be showed:" = "AirBattery 仅会显示下列设备:";
-"The following devices will be ignored:" = "AirBattery 将会忽略下列设备:";
+"Only the following devices will be showed" = "AirBattery 仅会显示下列设备";
+"The following devices will be ignored" = "AirBattery 将会忽略下列设备";
