--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -58,8 +58,8 @@
 "General" = "一般设置";
 "DockTile" = "程序坞图标";
 //"Notification" = "充电通知";
-"Blacklist" = "屏蔽设备";
-"AirBattery Settings" = "AirBattery设置";
+"Blocklist" = "屏蔽设备";
+"AirBattery Settings" = "AirBattery 设置";
 "Hidden Device:" = "已隐藏的设备:";
 //"StatusBar" = "状态栏图标";
 "Dynamic Battery Icon" = "动态电池图标";
@@ -131,7 +131,7 @@
 "Nearcast will broadcast your battery data within the local network." = "Nearcast 将会将会在本地局域网中对您的电量数据进行广播";
 "Your data has been encrypted using the group id, don't share it with others." = "所有被发送的数据内容均已经过加密, 所以请不要将你的小组 ID 交给他人";
 "Do not add too many Macs to a group, this can be tiring for the router!" = "请不要将太多 Mac 加入同一个 Nearcast 小组, 这可能会加重路由器的负担!";
-"Enter text" = "请输入文本";
+//"Enter text" = "请输入文本";
 "Add to List" = "添加到列表";
 "Cancel" = "取消";
 "Colorful Battery Icon" = "彩色电量图标";
@@ -163,14 +163,15 @@
 "Peer Info" = "节点信息";
 "Local ID" = "本机 ID";
 "Same as Nearbility" = "与 Nearbility 同步";
-"If you see a bluetooth pairing request from any device that isn't yours, add it to your blacklist!" = "如果您看到任何来自不属于您的设备的蓝牙配对请求, 将其加入黑名单就能让它消失.";
+"Reload" = "重载";
+"If you see a bluetooth pairing request from any device that isn't yours, add it to your blocklist!" = "如果您看到任何来自不属于您的设备的蓝牙配对请求, 将其加入屏蔽列表就能让它消失.";
 
 //"Permission Required" = "需要授权";
 //"Open Settings" = "打开系统设置";
 "If some of your devices shows battery level in the Bluetooth menu, but AirBattery doesn't find it. Try disconnecting and reconnecting it, and wait a few minutes." = "如果某些设备在系统蓝牙菜单中有电量显示\n但是在 AirBattery 中没有显示出来的话\n请尝试断开然后重新连接它们并等待几分钟";
 "AirBattery Tips" = "AirBattery 小贴士";
 "Don't remind me again" = "不再提醒";
-"Whitelist Mode" = "白名单模式";
+"Allowlist Mode" = "白名单模式";
 //"Only the following BLE devices will be connected:" = "AirBattery 仅会尝试读取下列 BLE 设备:";
 //"The following BLE devices will be ignored:" = "AirBattery 将会忽略下列所有 BLE 设备:";
 "Only the following devices will be showed" = "AirBattery 仅会显示下列设备";
