--- a/AirBattery/zh-Hans.lproj/Localizable.strings
+++ b/AirBattery/zh-Hans.lproj/Localizable.strings
@@ -11,12 +11,8 @@
 "Light" = "浅色";
 "Dark" = "深色";
 "Settings..." = "偏好设置...";
-"No Battery!" = "未检测到电池!";
-"Time until full: " = "距充满还有: ";
-"Time until empty: " = "距用完还有: ";
 "Until Full:" = "距离充满:";
 "Until Empty:" = "可用时长:";
-"Show" = "显示";
 "About AirBattery" = "关于 AirBattery";
 " (Case)" = " (充电盒)";
 " mins ago" = " 分钟前";
@@ -25,26 +21,21 @@
 "Built-in Battery Style" = "内建电池样式";
 "Quit AirBattery" = "退出 AirBattery";
 "Show AirBattery" = "将 AirBattery 置于";
-"Dock Icon" = "程序坞";
+"Dock" = "程序坞";
 "Menu Bar" = "菜单栏";
 "Both" = "同时显示";
 "None" = "隐藏图标";
 "Carousel Mode" = "轮播模式";
-"On" = "启用";
-"Off" = "关闭";
 "Discover iOS devices via Network" = "通过局域网扫描 iOS 设备";
 "Discover iOS devices via Bluetooth" = "通过蓝牙扫描 iOS 设备";
 "Apple Pencil from your iPad" = "从 iPad 读取 Apple Pencil";
 "Discover BT and BLE devices" = "扫描常规和低功耗蓝牙设备";
-//"Find AirPods / Beats" = "扫描AirPods/Beats耳机";
-//"Non-Apple BLE Devices" = "扫描第三方 BLE 设备";
-//"Guess Power Status" = "推测 BLE 设备充电状态";
 "Discover more BT devices" = "扫描更多常规蓝牙设备";
 "Discover more BLE devices" = "扫描更多低功耗蓝牙设备";
 "after 20min" = "20分钟后";
 "after 40min" = "40分钟后";
-"min" = "分钟";
-"Remove Offline Device:" = "移除离线设备:";
+"after 60min" = "60分钟后";
+"Remove Offline Device" = "移除离线设备";
 "Never" = "永不";
 "Hidden" = "不显示";
 "AirBattery is not running\nLaunch the app to make the widget work" = "请先启动 AirBattery 主程序以使小组件正常工作";
@@ -56,17 +47,12 @@
 "Batteries" = "电量信息";
 "Launch at Login" = "登录时启动";
 "General" = "一般设置";
-"DockTile" = "程序坞图标";
-//"Notification" = "充电通知";
 "Blocklist" = "屏蔽设备";
 "AirBattery Settings" = "AirBattery 设置";
 "Hidden Device:" = "已隐藏的设备:";
-//"StatusBar" = "状态栏图标";
 "Dynamic Battery Icon" = "动态电池图标";
 "Show Percentage" = "显示百分比";
-"Show Percentage on" = "将百分比显示在";
 "Hide percentage when above" = "高于此电量自动隐藏百分比";
-"Show Built-in Battery" = "显示此 Mac 的电池";
 "Reverse Device List" = "颠倒设备列表顺序";
 "Widget" = "小组件";
 "No Device Found!" = "未发现任何设备!";
@@ -74,9 +60,7 @@
 "\"%@\" remaining battery %d%%" = "\"%@\" 剩余电量 %d%%";
 "Fully Charged" = "电池电量充足";
 "\"%@\" battery has reached %d%%" = "\"%@\" 已充电至 %d%%";
-//"Notification Sound:" = "播放通知音效:";
-//"Low Battery Threshold:" = "电量过低阈值:";
-//"Fully Charged Threshold:" = "充电完成阈值:";
+"Snooze for 30 minutes" = "半小时后再提醒我";
 "Select a Device in Preferences" = "请在设置中选择需要显示的设备";
 "Single Device Widget" = "单设备小组件";
 "Refresh Interval (min)" = "数据更新间隔 (分钟)";
@@ -95,12 +79,9 @@
 "Automatically download updates" = "自动下载程序更新";
 "Not Set" = "未指定";
 "Click Dock icon again to hide this panel" = "再次点击 Dock 图标收起此面板";
-//"Click to enter the device name" = "点此输入需要屏蔽的设备名称";
 "Scan your iPhone / iPad / Apple Watch / VisionPro and other iDevices in your local network." = "扫描局域网中所有属于您的 iPhone / iPad / Apple Watch / VisionPro 等设备.";
 "Scan your iPhone and iPad (Cellular) via Bluetooth." = "尝试通过蓝牙扫描周边属于您的 iPhone 或蜂窝版 iPad";
 "Read the battery status of the connected Apple Pencil through your iPad\n(It may take 10 minutes or longer to discover the Pencil for the first time)\n\nWARNING: This is a BETA feature and may drain your iPad's battery faster!" = "尝试读取已连接到 iPad 的 Apple Pencil 的电量信息\n(首次可能需要 10 分钟甚至更久才能读取到 Pencil)\n\n请注意: 这是一项测试版功能, 可能会加速 iPad 电池耗尽!";
-//"Guess if the iPhone / iPad or BLE device found by Bluetooth is charging" = "利用电量变化来推测通过蓝牙发现的 iPhone / iPad 或其他 BLE 设备";
-//"Get the battery usage of some Bluetooth peripherals (mouse, keyboard, headphone, etc.)\n\nPlease Note: Some devices cannot be listed even though macOS knows their battery usage" = "获取某些受支持的蓝牙设备的电量信息 (鼠标、键盘、耳机等)\n\n请注意: 有些设备无法被列出, 即使你可以在 macOS 内置的小组件中看到它";
 "Get the battery usage of some Bluetooth peripherals like mouse, keyboard, headphone or etc.\n\nIf some of your device is not shown, try enabling \"Discover more BT devices\" or \"Discover more BLE devices\"" = "获取某些受支持的蓝牙设备的电量信息 (鼠标、键盘、耳机等)\n\n如果部分设备没有显示出来, 请尝试启用\"发现更多常规蓝牙设备\" 或 \"发现更多低功耗蓝牙设备\"";
  "Get the battery usage of more third-party Bluetooth devices\n\nBattery data will be updated when devices are reconnected to the Mac or the Mac wakes up." = "获取更多第三方常规蓝牙设备的电量信息\n\n\仅当这些设备刚被连接时或 Mac 被唤醒时, 电池数据才会更新.";
 "Try to get the battery usage of any Bluetooth device that AirBattery can find\n\nWARNING: This is a BETA feature and may cause unexpected errors!" = "尝试扫描周边所有的 BLE 设备, 即使它可能不属于您\n\n请注意: 这是一项测试版功能, 可能会导致未知的错误!";
@@ -131,7 +112,6 @@
 "Nearcast will broadcast your battery data within the local network." = "Nearcast 将会将会在本地局域网中对您的电量数据进行广播";
 "Your data has been encrypted using the group id, don't share it with others." = "所有被发送的数据内容均已经过加密, 所以请不要将你的小组 ID 交给他人";
 "Do not add too many Macs to a group, this can be tiring for the router!" = "请不要将太多 Mac 加入同一个 Nearcast 小组, 这可能会加重路由器的负担!";
-//"Enter text" = "请输入文本";
 "Add to List" = "添加到列表";
 "Cancel" = "取消";
 "Colorful Battery Icon" = "彩色电量图标";
@@ -151,7 +131,6 @@
 "Battery alert for" = "设置电量提醒";
 "Notify me when battery charged above:" = "当设备充电至高于此电量时发出通知:";
 "Notify me when battery goes below:" = "当设备放电至低于此电量时发出通知:";
-"Dock" = "程序坞";
 "Displaying AirBattery on the Dock will consume more power, it is better to use Menu Bar mode or Widgets." = "在程序坞上显示电池信息会导致能耗增高,\n使用菜单栏模式或小组件可以降低性能占用.";
 "Inside" = "在图标内部";
 "Outside" = "在图标外部";
@@ -165,15 +144,10 @@
 "Same as Nearbility" = "与 Nearbility 同步";
 "Reload" = "重载";
 "If you see a bluetooth pairing request from any device that isn't yours, add it to your blocklist!" = "如果您看到任何来自不属于您的设备的蓝牙配对请求, 将其加入屏蔽列表就能让它消失.";
-
-//"Permission Required" = "需要授权";
-//"Open Settings" = "打开系统设置";
 "If some of your devices shows battery level in the Bluetooth menu, but AirBattery doesn't find it. Try disconnecting and reconnecting it, and wait a few minutes." = "如果某些设备在系统蓝牙菜单中有电量显示\n但是在 AirBattery 中没有显示出来的话\n请尝试断开然后重新连接它们并等待几分钟";
 "AirBattery Tips" = "AirBattery 小贴士";
 "Don't remind me again" = "不再提醒";
 "Allowlist Mode" = "白名单模式";
-//"Only the following BLE devices will be connected:" = "AirBattery 仅会尝试读取下列 BLE 设备:";
-//"The following BLE devices will be ignored:" = "AirBattery 将会忽略下列所有 BLE 设备:";
 "Only the following devices will be showed" = "AirBattery 仅会显示下列设备";
 "The following devices will be ignored" = "AirBattery 将会忽略下列设备";
 
